<resources>
    <string name="app_name">Run for your lives</string>
    <string name="bt_jugar">Play</string>
    <string name="bt_opciones">Settings</string>
    <string name="bt_salir">Exit</string>
    <string name="textoNombre">Name: </string>
    <string name="title_activity_avatares_grid_view">AvataresGridView</string>
    <string name="bt_arcade">Games</string>
    <string name="txt_pais">Country: </string>
    <string name="p_max">Max Score</string>
    <string name="estrrellas">Stars</string>
    <string name="clasi_global">Global</string>
    <string name="respuesta_hint">Answer...</string>
    <string name="nombre">Name...</string>
    <string name="titulo_pregunta_tuidioma">Write in YOUR LANGUAGE the next word:</string>
    <string name="level_completed">Level Completed*</string>
    <string name="txt_preg_pista">Translate into English: </string>
    <string name="titulo_pregunta_english">Write in ENGLISH the next word:</string>
    <string name="text_salir">Are you sure? You will lose all your session score</string>
    <string name="text_win">Congratulations</string>
    <string name="txtTittleNormalQuestion">Guess the word</string>
    <string name="txtTittleImageQuestion">Guess the image</string>
    <string name="txtTittleChooseAnswer">Choose the rigth answer</string>
    <string name="txtTittleTranslate">Translate the word</string>
    <string name="txtMax">Max Score</string>
    <string name="txtStarts">Stars</string>
    <string name="instrucciones_juego"> - Instructions - </string>
    <string name="puntuacionCartas">Best score: </string>
    <string name="instCartas">Find the couples of cards to get points in the least number of tries. Points will be deducted if you make a mistake.</string>
    <string name="txtJuegoNave">Destroy the fast food shooting it before it destroy you</string>
    <string name="record">Record:</string>
    <string name="inst_comidaCae">You should only take healthy food. The speed will increases over time to make the game harder.
                                    You have 3 lifes, if you take unhealthy food or a healthy food pass the line you will loose one life. !Good luck¡</string>
    <string name="maximaScore">Your Higer score is:</string>
    <string name="jugar">play</string>
    <string name="instrucciones">instructions</string>
    <string name="recordUnirComida">record</string>
    <string name="elrecord_es">Max Score:</string>
    <string name="puntos">points</string>
    <string name="puntuacion">Score</string>
    <string name="instrucciones1">You must gather healthy food to add points.</string>
    <string name="instrucciones2">But carefull!</string>
    <string name="instrucciones3">If you join unhealthy food your points will go down.</string>
    <string name="instrucciones4">Touch with your finger to choose which one you want to join with another food of the same type.</string>
    <string name="instrucciones5">Â¡Good luck!</string>

    <string name="popup">you have got:</string>
    <string name="explicacion1">Shoot the fast food to destroy it and get the next level</string>
    <string name="explicacion2">Press the direction buttons to move the character and press A to shoot</string>

</resources>
