<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_cartas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="dam.riberadeltajo.alber.mens_fervida_videogame.juegoCartas.MainActivityCartas"
    android:background="@drawable/fondo_res">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:text="@string/instrucciones_juego"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="21dp"
            android:id="@+id/txtInstrucCartas"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textAlignment="center"
            android:textStyle="normal|bold"
            android:textSize="18sp" />

        <Button
            android:layout_width="105dp"
            android:layout_height="68dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="27dp"
            android:layout_marginEnd="27dp"
            android:layout_marginBottom="46dp"
            android:id="@+id/button12"
            android:onClick="juguemos"
            android:background="@drawable/btn_aceptar" />

        <Button
            android:layout_width="105dp"
            android:layout_height="68dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="43dp"
            android:id="@+id/btnVolver"
            android:onClick="salir"
            android:background="@drawable/boton_rojo_volver" />

        <TextView
            android:text="@string/puntuacionCartas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtPuntosCartas"
            android:layout_marginTop="59dp"
            android:layout_below="@+id/txtInstCartas2"
            android:layout_centerHorizontal="true"
            android:textStyle="normal|bold"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="217dp"
            android:id="@+id/txtPCartas"
            android:textStyle="normal|bold"
            android:textSize="18sp" />

        <TextView
            android:text="@string/instCartas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtInstCartas2"
            android:layout_below="@+id/txtInstrucCartas"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="18sp"
            android:textStyle="normal|bold" />
    </RelativeLayout>
</RelativeLayout>
