<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/fondoprincipal_unircomida"
    tools:context="com.example.alber.mens_fervida_videogame.dam.example.alber.mens_fervida_videogame.MainActivityUnirComida">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="38dp"
        android:layout_alignParentBottom="true"
        >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true">

            <Space
                android:layout_width="93dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.24" />

            <Button
                android:layout_width="120dp"
                android:layout_height="101dp"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/btnJugar"
                android:background="@mipmap/botonunircomida"
                android:onClick="abrirJugar"
                android:layout_weight="0.11"
                android:text="@string/jugar"
                android:textAlignment="center"
                android:textSize="18dp"
                android:textColor="@android:color/white" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/btnJugar"
                android:layout_alignParentEnd="true"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="91dp">

            <Space
                android:layout_width="28dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.28" />

            <Button

                android:layout_below="@+id/linearLayout2"
                android:layout_alignParentStart="true"
                android:layout_marginStart="87dp"
                android:id="@+id/btnInstrucciones"
                android:background="@mipmap/botonunircomida"
                android:layout_width="120dp"
                android:layout_height="101dp"
                android:onClick="abrirInstrucciones"
                android:text="@string/instrucciones"
                android:layout_weight="0.87"
                android:textAlignment="center"
                android:textSize="15dp"
                android:textColor="@android:color/white" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="7.61" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="86dp">

            <Space
                android:layout_width="93dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.24" />

            <Button

                android:id="@+id/btnRecord"
                android:background="@mipmap/botonunircomida"
                android:layout_weight="0.11"
                android:layout_width="120dp"
                android:layout_height="101dp"
                android:onClick="abrirRecord"
                android:text="@string/record"
                android:textSize="18dp"
                android:textColor="@android:color/white" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
