<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ventanaopciones"
    android:weightSum="7"
    android:id="@+id/rl_main">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5" />

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:weightSum="2"
            android:gravity="center_horizontal">

        <TextView
            android:text="@string/textoNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtNombre"
            android:layout_weight="0.06"
            android:textSize="@dimen/tamano_text_normal"
            android:fontFamily="@string/textoNombre"
            android:gravity="center_vertical" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/campoNombre"
            android:layout_weight="1"
            tools:textAppearance="@style/TextAppearance.AppCompat"
            android:theme="@style/AppTheme"
            android:background="@drawable/campo_texto"
            android:padding="5dp" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="2"
            android:gravity="center_horizontal">

        <TextView
            android:text="@string/txt_pais"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textSize="@dimen/tamano_text_normal"
            android:layout_weight="0.13" />

        <Spinner
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:id="@+id/spPaises"
            android:layout_weight="1.00"
            android:theme="@style/AppTheme"
            android:background="@drawable/backtexto"
            android:entries="@string/bt_salir" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@drawable/seleccionavatar"
        android:padding="30dp">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1"
            android:orientation="vertical"
            android:layout_margin="25dp">

            <GridView
                android:layout_width="match_parent"
                android:id="@+id/listaPersonajes"
                android:layout_height="match_parent"
                android:numColumns="auto_fit" />
        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="12"
        android:gravity="center_horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnAceptar_dialog_opc"
            android:layout_weight="2"
            android:background="@drawable/btn_aceptar_azul"
            android:layout_gravity="left"
            android:gravity="left" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:layout_weight="2"
            android:layout_gravity="left"
            android:gravity="left"
            android:background="@drawable/btn_musica_rojo" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            android:layout_weight="2"
            android:layout_gravity="left"
            android:gravity="left"
            android:background="@drawable/btn_volumne_verde" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnVolver"
            android:layout_weight="2"
            android:background="@drawable/btn_volver_azul"
            android:onClick="volver" />

    </LinearLayout>

</LinearLayout>

