<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="7"
    android:background="@drawable/ventana_preg1"
    android:weightSum="10">

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.30" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.30"
        android:weightSum="0">

        <TextView
            android:text="@string/txtTittleImageQuestion"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:id="@+id/txtTittle"
            android:textAlignment="center"
            android:paddingTop="15dp"
            android:fontFamily="sans-serif-condensed"
            android:textSize="18sp"
            android:scrollX="0dp"
            android:scrollHorizontally="false"
            android:rotationX="0"
            android:rotation="0"
            android:elevation="0dp"
            android:textColor="@android:color/background_light" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.30" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5.5"
        android:weightSum="2"
        android:gravity="bottom">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:weightSum="1"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/txtQuestion"
                android:layout_weight="0.8"
                android:textAlignment="center"
                android:textSize="@dimen/tamano_text_normal"
                android:text="@string/titulo_pregunta_english" />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:weightSum="1"
            android:gravity="center_horizontal">

            <TextView
                android:text="Palabra"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="@dimen/tamano_texto_boton"
                android:id="@+id/text_word_ingles" />

        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="10"
            android:layout_margin="0dp">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:weightSum="1"
                android:gravity="center">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="1"
                    android:gravity="center">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:id="@+id/btn_aceptar_pregunta_ingles"
                        android:layout_weight="0.8"
                        android:background="@drawable/boton_correcto" />
                </LinearLayout>

            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.4" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5.5"
                android:padding="0dp"
                android:weightSum="2">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:weightSum="1"
                    android:gravity="center">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/et_respuesta_ingles"
                        android:padding="10dp"
                        android:layout_weight="0.7"
                        android:hint="@string/respuesta_hint" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>